layout satisfies three breakpoints: large tablet, small dekstop, large desktop

--- a/index.html
+++ b/index.html
@@ -3,24 +3,56 @@
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="styles/main.css" />
-	<link href="https://fonts.googleapis.com/css?family=Montserrat:500" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,800" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
 	<title>Instagram</title>
 </head>
 <body>
 	<!--BACKGROUND-->
 	<section class="blue_gradient">
-		<img src="images/brand.png" alt="Instagram Logo">
 	</section>
 	<section class="gray">
 	</section>
+	<div class="opacity_hack">
+	</div>
 	<!--BACKGROUND-->
 	<!--ACTUAL CONTENT-->
-	<div class="phones_div">
-		<img class="phones" src="images/phones.png" alt="A picture of some archaic iPhones that probably don't work anymore.">
+	<div class="all_content">
+		<div class="phones_div">
+			<img class="phones" src="images/phones.png" alt="A picture of some archaic iPhones that probably don't work anymore.">
+		</div>
+		<div class="content_div">
+			<div class="logo_banner">
+				<img src="images/brand.png" alt="Instagram Logo">
+				<button><img src="images/home.png" alt="Home Icon">Log in</button>
+			</div>
+			<div class="about">
+				<div class="text_container">
+					<h1>Capture and Share the World's Moments</h1>
+					<p>Instagram is a fast, beautiful, and fun way to share your life with friends and family.
+					</p>
+					<p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's 		that easy. You can even share to Facebook, Twitter, Tumblr, and more. It's a new way to see the world.
+					</p>
+					<p class="last">Oh yeah, did we mention it's free?</p>
+					<a class="badge" href="#"><img src="images/badge-iphone.png" alt="Link to Apple App Store"></a>
+					<a class="badge smaller" href="#"><img src="images/badge-android.png" alt="Link to Google Play Store"></a>
+				</div>
+			</div>
+		</div>
+		<nav>
+			<ul>
+				<li><a href="#">About Us</a></li>
+				<li><a href="#">Support</a></li>
+				<li><a href="#">Blog</a></li>
+				<li><a href="#">Press</a></li>
+				<li><a href="#">API</a></li>
+				<li><a href="#">Jobs</a></li>
+				<li><a href="#">Privacy</a></li>
+				<li><a href="#">Terms</a></li>
+				<li>&copy; 2014 Instagram</li>
+			</ul>
+		</nav>
+		<!--ACTUAL CONTENT-->
 	</div>
-	<div class="content_div">
-		<img src="images/brand.png" alt="Instagram Logo">
-	</div>
-	<!--ACTUAL CONTENT-->
 </body>
 </html>
