--- a/index.html
+++ b/index.html
@@ -40,19 +40,21 @@
 				</div>
 			</div>
 		</div>
-		<nav>
-			<ul>
-				<li><a href="#">About Us</a></li>
-				<li><a href="#">Support</a></li>
-				<li><a href="#">Blog</a></li>
-				<li><a href="#">Press</a></li>
-				<li><a href="#">API</a></li>
-				<li><a href="#">Jobs</a></li>
-				<li><a href="#">Privacy</a></li>
-				<li><a href="#">Terms</a></li>
-				<li>&copy; 2014 Instagram</li>
-			</ul>
-		</nav>
+		<footer>
+			<nav>
+				<ul>
+					<li><a href="#">About Us</a></li>
+					<li><a href="#">Support</a></li>
+					<li><a href="#">Blog</a></li>
+					<li><a href="#">Press</a></li>
+					<li><a href="#">API</a></li>
+					<li><a href="#">Jobs</a></li>
+					<li><a href="#">Privacy</a></li>
+					<li><a href="#">Terms</a></li>
+					<li>&copy; 2014 Instagram</li>
+				</ul>
+			</nav>
+		</footer>
 		<!--ACTUAL CONTENT-->
 	</div>
 </body>
