--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 					<li><a href="#">Jobs</a></li>
 					<li><a href="#">Privacy</a></li>
 					<li><a href="#">Terms</a></li>
-					<li>&copy; 2014 Instagram</li>
+					<li class="copyright">&copy; 2014 Instagram</li>
 				</ul>
 			</nav>
 		</footer>
